--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 
   <!-- Header -->
   <header class="w-full bg-white shadow-md p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-orange-600">Reddix</h1>
+    <h1 class="text-2xl font-bold text-orange-600">Reddixx</h1>
     <div class="w-full max-w-md">
       <input
         type="text"
