--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,18 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="src/styles/styles.css">
 </head>
-<body class="bg-gray-100">
+<body class="bg-[#14181a]">
 
   <!-- Header -->
-  <header class="w-full bg-white shadow-md p-4 flex justify-between items-center">
+  <header class="w-full shadow-md p-4 flex justify-between items-center border-b">
+    <button id="botonAside" class="md:hidden">
+      <svg width="30" height="30" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+        <rect y="5" width="20" height="2" rx="2" fill="gray"/>
+        <rect y="11" width="20" height="2" rx="2" fill="gray"/>
+        <rect y="17" width="20" height="2" rx="2" fill="gray"/>
+      </svg>
+    </button>
+    
     <h1 class="text-2xl font-bold text-orange-600">Reddixx</h1>
     <div class="w-full max-w-md">
       <input
@@ -24,13 +32,29 @@
   <!-- Main layout -->
   <div class="flex">
     <!-- Aside / Sidebar -->
-    <aside class="w-64 bg-gray-900 text-white min-h-screen p-6">
-      <h2 class="text-lg font-semibold mb-4">Menú</h2>
+    <aside class="w-64 text-white min-h-screen p-6 border-r">
+      <nav class="flex flex-col gap-2 border-b pb-2 mb-4">
+        <p class="text-[#637d84]">TOPICS</p>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Games</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Internet Culture (Viral)</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Q&As</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Technology</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Pop Culture</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Movies & TV</a>
+      </nav>
+      <nav class="flex flex-col gap-2 border-b pb-2 mb-4">
+        <p class="text-[#637d84]">RESOURCES</p>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">About Reddix</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Advertise</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Help</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Blog</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Careers</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Press</a>
+      </nav>
       <nav class="flex flex-col gap-2">
-        <a href="#" class="hover:bg-gray-700 px-4 py-2 rounded">Inicio</a>
-        <a href="#" class="hover:bg-gray-700 px-4 py-2 rounded">Perfil</a>
-        <a href="#" class="hover:bg-gray-700 px-4 py-2 rounded">Configuración</a>
-        <a href="#" class="hover:bg-gray-700 px-4 py-2 rounded">Salir</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Communities</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Best of Reddix</a>
+        <a href="#" class="hover:bg-[#1c2224] px-4 py-2 rounded">Topics</a>
       </nav>
     </aside>
 
